--- a/package.json
+++ b/package.json
@@ -25,7 +25,11 @@
     "dev": "vite"
   },
   "devDependencies": {
+    "@vitejs/plugin-vue": "^5.2.3",
     "typescript": "^5.8.2",
     "vite": "^6.2.5"
+  },
+  "dependencies": {
+    "vue": "^3.5.13"
   }
 }
