--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "node": ">= 20"
   },
   "scripts": {
-    "dev": "vite"
+    "dev": "vite",
+    "build": "vite build"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
+    "rollup-plugin-visualizer": "^5.14.0",
     "typescript": "^5.8.2",
     "vite": "^6.2.5"
   },
