--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "@vitejs/plugin-vue": "^5.2.3",
     "rollup-plugin-visualizer": "^5.14.0",
     "typescript": "^5.8.2",
-    "vite": "^6.2.5"
+    "vite": "^6.2.5",
+    "vue-tsc": "^2.2.8"
   },
   "dependencies": {
     "vue": "^3.5.13"
