biomeのlintエラー消し

--- a/biome.json
+++ b/biome.json
@@ -31,6 +31,9 @@
       "style": {
         "noParameterAssign": "off",
         "noNonNullAssertion": "off"
+      },
+      "correctness": {
+        "noConstantCondition": "off"
       }
     }
   },
