公開準備を整えて公開した

--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,7 @@
   },
   "files": {
     "ignoreUnknown": false,
-    "ignore": ["*.js"]
+    "ignore": ["*.js", "dist/*"]
   },
   "formatter": {
     "enabled": true,
