--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
+    "check": "vue-tsc --noEmit",
     "lint": "biome lint",
     "lint-fix": "biome lint --write",
     "lint-fix-unsafe": "biome lint --write --unsafe"
@@ -38,6 +39,7 @@
     "@biomejs/biome": "1.9.4",
     "@vitejs/plugin-vue": "^5.2.3",
     "rollup-plugin-visualizer": "^5.14.0",
+    "source-map-explorer": "^2.5.3",
     "typescript": "^5.8.2",
     "vite": "^6.2.5",
     "vite-plugin-dts": "^4.5.3",
