--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@vitejs/plugin-vue": "^5.2.3",
     "rollup-plugin-visualizer": "^5.14.0",
     "source-map-explorer": "^2.5.3",
+    "terser": "^5.39.0",
     "typescript": "^5.8.2",
     "vite": "^6.2.5",
     "vite-plugin-dts": "^4.5.3",
