--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,7 @@
   },
   "files": {
     "ignoreUnknown": false,
-    "ignore": ["*.js", "dist/*"]
+    "ignore": ["*.js", "dist/*", "*.svelte"]
   },
   "formatter": {
     "enabled": true,
