--- a/package.json
+++ b/package.json
@@ -29,24 +29,22 @@
   "main": "dist/index.es.js",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
-    "check": "vue-tsc --noEmit",
+    "build": "svelte-check && vite build",
+    "check": "svelte-check",
     "lint": "biome lint",
     "lint-fix": "biome lint --write",
     "lint-fix-unsafe": "biome lint --write --unsafe"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
-    "@vitejs/plugin-vue": "^5.2.3",
+    "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "rollup-plugin-visualizer": "^5.14.0",
     "source-map-explorer": "^2.5.3",
+    "svelte": "^5.26.2",
+    "svelte-check": "^4.1.6",
     "terser": "^5.39.0",
     "typescript": "^5.8.2",
     "vite": "^6.2.5",
-    "vite-plugin-dts": "^4.5.3",
-    "vue-tsc": "^2.2.8"
-  },
-  "dependencies": {
-    "vue": "^3.5.13"
+    "vite-plugin-dts": "^4.5.3"
   }
 }
