--- a/tsconfig.json
+++ b/tsconfig.json
@@ -110,5 +110,9 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true,                                 /* Skip type checking all .d.ts files. */
     //"useDefineForClassFields": false,
-  }
+  },
+  "exclude": [
+    "./node_modules/",
+    "./dist/"
+  ]
 }
