--- a/biome.json
+++ b/biome.json
@@ -21,7 +21,8 @@
     "rules": {
       "recommended": true,
       "suspicious": {
-        "noExplicitAny": "off"
+        "noExplicitAny": "off",
+        "noGlobalIsNan": "info"
       },
       "complexity": {
         "noExtraBooleanCast": "off",
