--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -39,6 +39,7 @@
     }
   },
   "scripts": {
+    "dev": "vite build --watch",
     "build": "tsc --noEmit && vite build",
     "check": "tsc --noEmit",
     "lint": "biome lint",
