--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@udop/penpa-player-lib",
-  "version": "0.1.0",
-  "description": "Scripts for handling puzzle objects",
+  "version": "0.2.0",
+  "description": "pzprjsをTypescript化したライブラリ",
   "type": "module",
   "sideEffects": false,
   "directories": {
