--- a/packages/wc/package.json
+++ b/packages/wc/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@udop/penpa-player",
-  "version": "0.1.0",
-  "description": "Scripts for handling puzzle objects",
+  "version": "0.2.0",
+  "description": "pzprv3形式のパズルをプレイできるWeb Components",
   "type": "module",
   "directories": {
     "test": "test"
@@ -49,6 +49,6 @@
     "vitest": "^3.1.2"
   },
   "dependencies": {
-    "@udop/penpa-player-lib": "0.1.0"
+    "@udop/penpa-player-lib": "0.2.0"
   }
 }
