--- a/packages/wc/package.json
+++ b/packages/wc/package.json
@@ -38,6 +38,7 @@
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
+    "@types/node": "^22.15.3",
     "rollup-plugin-visualizer": "^5.14.0",
     "source-map-explorer": "^2.5.3",
     "svelte": "^5.26.2",
