--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -54,7 +54,6 @@
     "terser": "^5.39.0",
     "typescript": "^5.8.2",
     "vite": "^6.2.5",
-    "vite-plugin-dts": "^4.5.3",
-    "vitest": "^3.1.2"
+    "vite-plugin-dts": "^4.5.3"
   }
 }
