--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "packageManager": "pnpm@10.9.0",
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
+    "@changesets/cli": "^2.29.3",
     "vite": "^6.3.3",
     "vitest": "^3.1.2"
   }
