--- a/packages/wc/package.json
+++ b/packages/wc/package.json
@@ -54,6 +54,7 @@
     "vitest": "^3.1.2"
   },
   "dependencies": {
+    "@rollup/plugin-terser": "^0.4.4",
     "@udop/penpa-player-lib": "workspace: *"
   }
 }
