バンドルをviteからrollupに

--- a/packages/wc/package.json
+++ b/packages/wc/package.json
@@ -32,7 +32,8 @@
   "main": "dist/index.es.js",
   "scripts": {
     "dev": "vite",
-    "build": "svelte-check && vite build",
+    "build:each": "rollup -c rollup.config.mjs",
+    "build:index": "rollup -c rollup.index.config.mjs",
     "check": "svelte-check",
     "lint": "biome lint",
     "makeIndex": "node --experimental-strip-types .\\tools\\makeIndex.ts",
@@ -40,13 +41,20 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
+    "@rollup/plugin-node-resolve": "^16.0.1",
+    "@rollup/plugin-typescript": "^12.1.2",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@types/node": "^22.15.3",
+    "rollup": "^4.41.1",
+    "rollup-plugin-import-css": "^3.5.8",
+    "rollup-plugin-serve": "^3.0.0",
+    "rollup-plugin-svelte": "^7.2.2",
     "rollup-plugin-visualizer": "^5.14.0",
     "source-map-explorer": "^2.5.3",
     "svelte": "^5.26.2",
     "svelte-check": "^4.1.6",
     "terser": "^5.39.0",
+    "tslib": "^2.8.1",
     "typescript": "^5.8.2",
     "vite": "^6.2.5",
     "vite-plugin-dts": "^4.5.3",
