--- a/packages/wc/tsconfig.json
+++ b/packages/wc/tsconfig.json
@@ -31,7 +31,7 @@
     "moduleResolution": "bundler",                     /* Specify how TypeScript looks up a file from a given module specifier. */
     "baseUrl": "./",                                  /* Specify the base directory to resolve non-relative module names. */
     "paths": {
-      //"@udop/penpa-player-lib": ["../lib/src"]
+      "@udop/penpa-player-lib": ["../lib/dist"]
     },                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": [],                                  /* Specify multiple folders that act like './node_modules/@types'. */
@@ -57,8 +57,8 @@
     // "declarationMap": true,                           /* Create sourcemaps for d.ts files. */
     // "sourceMap": true,                                /* Create source map files for emitted JavaScript files. */
     // "inlineSourceMap": true,                          /* Include sourcemap files inside the emitted JavaScript. */
-    "emitDeclarationOnly": true,
-    "declaration": true,
+    //"emitDeclarationOnly": true,
+    //"declaration": true,
     //"declarationDir": "./types",    
     // "outFile": "./",                                  /* Specify a file that bundles all outputs into one JavaScript file. If 'declaration' is true, also designates a file that bundles all .d.ts output. */
     "outDir": "./dist",                                   /* Specify an output folder for all emitted files. */
