--- a/packages/wc/package.json
+++ b/packages/wc/package.json
@@ -51,9 +51,11 @@
     "rollup-plugin-serve": "^3.0.0",
     "rollup-plugin-svelte": "^7.2.2",
     "rollup-plugin-visualizer": "^5.14.0",
+    "sass": "^1.89.1",
     "source-map-explorer": "^2.5.3",
     "svelte": "^5.26.2",
     "svelte-check": "^4.1.6",
+    "svelte-preprocess-sass": "^2.0.1",
     "terser": "^5.39.0",
     "tslib": "^2.8.1",
     "typescript": "^5.8.2",
