--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -31,7 +31,7 @@
   "exports": {
     ".": {
       "import": "./dist/index.js",
-      "types": "./dist/lang/index.d.ts"
+      "types": "./dist/index.d.ts"
     },
     "./lang/*": {
       "import": "./dist/lang/*.js",
